other: CI optimization maybe? 1

--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -2,7 +2,7 @@ name: Installation Tests
 
 on:
   push:
-    branches: [ main, master, clean_up ]
+    branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
   workflow_dispatch:
