--- a/.github/workflows/test-cachyos-setup.yml
+++ b/.github/workflows/test-cachyos-setup.yml
@@ -2,7 +2,7 @@ name: Test CachyOS Setup Scripts
 
 on:
   push:
-    branches: [ main, master, clean_up ]
+    branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
   workflow_dispatch:
